Establishing main version

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         </div>
       </div>
     </nav>
-    <!-- END nav -->
+    <!-- END of nav -->
 
     <section
       class="hero-wrap"
