Basic Ver. Rest of the changes to be added soon

--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@
             <li class="nav-item">
               <a href="#impact" class="nav-link">Impact</a>
             </li>
-            <li class="nav-item">
+            <!--<li class="nav-item">
               <a href="#process" class="nav-link">Processes</a>
-            </li>
-            <li class="nav-item">
+            </li>-->
+            <!--<li class="nav-item">
               <a href="#business" class="nav-link">Business</a>
-            </li>
+            </li>-->
             <li class="nav-item">
               <a href="#about" class="nav-link">About</a>
             </li>
@@ -133,7 +133,7 @@
                 Save the environment. <span>Secure the Future.</span>
               </h1>
               <p style="font-size: 18px">
-                We converts plastic waste into durable building materials
+                We convert plastic waste into durable building materials
               </p>
               <div class="d-flex meta">
                 <div class="">
@@ -169,7 +169,7 @@
             ></div>
             <div
               class="img w-100 img-4 ml-md-3 p-4"
-              style="background-image: url(images/pic_9.jpg)"
+              style="background-image: url(images/about.jpg)"
             >
              
             </div>
@@ -182,7 +182,7 @@
                 23000 of the total 32658 tonnes of the waste dumped in Sudan annually is non-biodegradable plastic, and only 1% is recycled. The rest is dumped in landfills and water bodies.
               </p>
               <p>
-                In Partnership with the Ministry of Housing, Physical Planning and Environment, we do our part to change that by recycling the plastic into building materials.
+                We do our part to change that by recycling the plastic into building materials.
               </p>
             </div>
           </div>
@@ -347,7 +347,7 @@
       </div>
     </section>
 
-    <section class="ftco-counter img" id="section-counter">
+    <!--<section class="ftco-counter img" id="section-counter">
       <div class="container">
         <div class="row pt-md-5">
           <div
@@ -392,7 +392,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section>-->
 
     <section class="ftco-section ftco-no-pb ftco-no-pt" style="background-color: #040404 !important;">
       <div class="container">
@@ -409,7 +409,7 @@
               <div class="media-body py-md-4">
                 <h3>Cheaper Housing</h3>
                 <p>
-                  Our materials can be up to 30% cheaper then more traditional materials. Allowing you, our customer, to build your dream without breaking the bank
+                  Our materials can be up to 30% cheaper than more traditional alternatives. Allowing you, our customer, to build your dream without breaking the bank.
                 </p>
               </div>
             </div>
@@ -426,7 +426,7 @@
               <div class="media-body py-md-4">
                 <h3>Creating jobs</h3>
                 <p>
-                  Since our inception we've created over dozens of jobs within the industry.
+                  This virtually untapped market brings with it new job opportunities for the next generation of innovative minds in South Sudan.
                 </p>
               </div>
             </div>
@@ -443,7 +443,7 @@
               <div class="media-body py-md-4">
                 <h3>Supporing local businesses</h3>
                 <p>
-                  We've been able to build long lasting partnership with local garbage collection businesses.
+                  We plan on building long standing partnership with local garbage collection businesses and doing what we can to boost the local economy.
                 </p>
               </div>
             </div>
@@ -452,7 +452,7 @@
       </div>
     </section>
 
-    <section class="ftco-section ftco-portfolio" id="process">
+    <!--<section class="ftco-section ftco-portfolio" id="process">
       <div class="row justify-content-center no-gutters">
         <div class="col-md-12 heading-section text-center ftco-animate mb-5">
           <span class="subheading">Processes</span>
@@ -608,14 +608,14 @@
           </div>
         </div>
       </div>
-    </section>
+    </section>-->
 
-    <section class="ftco-section" id="business" style="background: #040404;">
+    <!--<section class="ftco-section" id="business" style="background: #040404;">
       <div class="container">
         <div class="row justify-content-center mb-5">
           <div class="col-md-7 heading-section text-center ftco-animate">
             <span class="subheading">Business</span>
-            <h2 style="color: #f7f7f7;">The Numbers</h2>
+            <h2 style="color: #f7f7f7;">Our Past Clients</h2>
           </div>
         </div>
         <div class="container">
@@ -675,7 +675,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section>-->
 
     <section class="ftco-section testimony-section bg-light" id="about">
       <div class="container">
@@ -702,7 +702,7 @@
                       ></div>
                       <div class="pl-3">
                         <p class="name">Akol Kuch Kiir</p>
-                        <span class="position">Founder CEO</span>
+                        <span class="position">Founder, CEO</span>
                       </div>
                     </div>
                   </div>
@@ -756,7 +756,7 @@
         </div>
         <div class="row justify-content-center mb-5">
           <div class="col-md-7 text-center heading-section ftco-animate">
-            <h4 class="mb-3">Our vision is to be the leading pioneers in South Sudan plastic free environment, while providing affordable materials.</h4>
+            <h4 class="mb-3">Our vision is to be the leading pioneers of a plastic free environment in South Sudan, whilst providing affordable materials.</h4>
           </div>
         </div>
       </div>
