--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
             <div class="row no-gutters align-items-center">
               <div
                 class="col-md-5 img js-fullheight"
-                style="background-image: url(images/work-3.jpg)"
+                style="background-image: url(images/work-6.jpg)"
               ></div>
               <div class="col-md-7">
                 <div class="text pt-5 pl-md-5 pl-md-4 ftco-animate">
@@ -553,7 +553,7 @@
             <div class="row no-gutters align-items-center">
               <div
                 class="col-md-5 order-md-last img js-fullheight"
-                style="background-image: url(images/work-4.jpg)"
+                style="background-image: url(images/work-7.jpg)"
               ></div>
               <div class="col-md-7">
                 <div class="text pt-5 pr-md-5 ftco-animate">
@@ -582,7 +582,7 @@
             <div class="row no-gutters align-items-center">
               <div
                 class="col-md-5 img js-fullheight"
-                style="background-image: url(images/work-5.jpg)"
+                style="background-image: url(images/work-8.jpg)"
               ></div>
               <div class="col-md-7">
                 <div class="text pt-5 pl-md-5 pl-md-4 ftco-animate">
@@ -615,7 +615,7 @@
         <div class="row justify-content-center mb-5">
           <div class="col-md-7 heading-section text-center ftco-animate">
             <span class="subheading">Business</span>
-            <h2 style="color: #f7f7f7;">The Numbers</h2>
+            <h2 style="color: #f7f7f7;">Our Clients</h2>
           </div>
         </div>
         <div class="container">
@@ -627,8 +627,8 @@
                 </div>
                 <div class="text d-flex align-items-center pt-3">
                   <div>
-                    <h3 class="mb-2">Client <br>1</h3>
-                    <span class="position mb-4">Company A</span>
+                    <h3 class="mb-2">Jonathan <br>Doe</h3>
+                    <span class="position mb-4">Fictional Retail Co.</span>
                   </div>
                 </div>
               </div>
@@ -638,23 +638,23 @@
                 <div class="img-wrap d-flex align-items-stretch justify-content-end">
                   <div class="img align-self-stretch" style="background-image: url(images/team-2.jpg);"></div>
                 </div>
-                <div class="text d-flex align-items-center pt-3">
-                  <div>
-                    <h3 class="mb-2">Client <br>2</h3>
-                    <span class="position mb-4">Company B</span>
+                <div class="col-sm-6 col-md-6 col-lg-3 ftco-animate">
+                  <div class="staff">
+                    <div class="img-wrap d-flex align-items-stretch justify-content-end">
+                      <div class="img align-self-stretch" style="background-image: url(images/team-3.jpg);"></div>
+                    </div>
+                    <div class="text d-flex align-items-center pt-3">
+                      <div>
+                        <h3 class="mb-2">Serious <br>Blackman</h3>
+                        <span class="position mb-4">Stark Industries</span>
+                      </div>
+                    </div>
                   </div>
                 </div>
-              </div>
-            </div>
-            <div class="col-sm-6 col-md-6 col-lg-3 ftco-animate">
-              <div class="staff">
-                <div class="img-wrap d-flex align-items-stretch justify-content-end">
-                  <div class="img align-self-stretch" style="background-image: url(images/team-3.jpg);"></div>
-                </div>
                 <div class="text d-flex align-items-center pt-3">
                   <div>
-                    <h3 class="mb-2">Client <br>3</h3>
-                    <span class="position mb-4">Company C</span>
+                    <h3 class="mb-2">Mr. <br>Businessman</h3>
+                    <span class="position mb-4">Doofenshmirtz Evil Inc</span>
                   </div>
                 </div>
               </div>
@@ -666,8 +666,8 @@
                 </div>
                 <div class="text d-flex align-items-center pt-3">
                   <div>
-                    <h3 class="mb-2">Clent <br>4</h3>
-                    <span class="position mb-4">Company D</span>
+                    <h3 class="mb-2">Owethu<br>Zulu</h3>
+                    <span class="position mb-4">Wakanda Construction Co. Ltd</span>
                   </div>
                 </div>
               </div>
